Add custom lines and readme.md